<resources>
    <string name="app_name">Reservation</string>
    <string name="jerry_chan">Jerry Chan</string>
    <string name="contact_no">Contact No:</string>
    <string name="N6436_7228">6436 7228</string>
    <string name="name">Name:</string>
    <string name="no_of_pax">No. of pax:</string>
    <string name="_5">5</string>
    <string name="smoking_table">Smoking table</string>
    <string name="registration_date">Registration Date:</string>
    <string name="registration_time">Registration Time:</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
</resources>